
	* Fix inline-jpeg decode to use mem buf, not tmp-file on platforms that
	don't support mem_open() etc.
	* Add eet_memopen_read() to be able to open an eet file already
	mapped in memory (eg compiled-in or mmaped some other way).

2008-09-11  Cedric BAIL

	* Improve hash generation speed for big files.
	* Inline more functions explicitly for speed.

2008-09-25  Carsten Haitzler (The Rasterman)

	1.1.0 release

2008-10-20  Cedric BAIL

	* Make use of eina.

2008-10-23  Cedric BAIL

	* Fix string in list and hash.

2008-10-24  Cedric BAIL

	* Fix array in eet_data.

2008-11-13  Cedric BAIL

	* Add crypto support to eet with OpenSSL.

2008-11-13  Arnaud de Turckheim

	* Add GNUtls support to eet.

2008-11-14  Cedric BAIL

	* Make password callback work with GNUtls.

2008-11-26  Cedric BAIL

	* Add a function to retrieve raw signature.

2009-01-30  Cedric BAIL

	* Fix a corrupted pointer use in eet_cipher.c

2009-02-09  Chidambar Zinnoury

	* Add some missing __UNUSED__ flags.

2009-02-26  Luis Felipe Strano Moraes

	* Fix problem reported by llvm

2009-03-09  Cedric BAIL

	* Add sha1 retrieval for an Eet_File.

2009-03-17  Gustavo Sverzut Barbieri

	* Force fsync() after data is written to file, solve ext4 issues.

2009-03-18  Carsten Haitzler (The Rasterman)

	* Disable fsync. Edit the code if you need it.

2009-03-19  Cedric BAIL

	* Make eet_data thread safe.

2009-03-25  Cedric BAIL

	* Fix eet pkg-config dependencies.
	* Fix double init of gcry.

2009-04-22  Carsten Haitzler (The Rasterman)

	* Release eet 1.2.0

2009-05-18  Cedric BAIL

	* Cleanup Eet_Data code.

2009-06-02  Cedric BAIL

	* Make eet_node API usable.

2009-06-14  Carsten Haitzler (The Rasterman)

	* Release eet 1.2.1

2009-07-08  Cedric BAIL

	* Reorder gcry init to be used during gnutls init.

2009-07-11  Hanspeter Portner

	* Improve docs/examples in Eet.h

2009-07-23  Cedric BAIL

	* Fix init on system without SECMEM.

2009-07-29  Carsten Haitzler (The Rasterman)

        * Release eet 1.2.2